added suit support and contract tests